完成登录接口, 并配置认证中间件
